diesel_compile_tests/tests/fail/cannot_join_to_non_joinable_table.stderr
error[E0277]: the trait bound `users::table: diesel::JoinTo<posts::table>` is not satisfied
  --> $DIR/cannot_join_to_non_joinable_table.rs:30:26
   |
30 |     let _ = users::table.inner_join(posts::table);
   |                          ^^^^^^^^^^ the trait `diesel::JoinTo<posts::table>` is not implemented for `users::table`
   |
   = help: the following implementations were found:
             <users::table as diesel::JoinTo<diesel::query_builder::BoxedSelectStatement<'a, QS, ST, DB>>>
             <users::table as diesel::JoinTo<diesel::query_builder::SelectStatement<F, S, D, W, O, L, Of, G>>>
             <users::table as diesel::JoinTo<diesel::query_source::joins::Join<Left, Right, Kind>>>
             <users::table as diesel::JoinTo<diesel::query_source::joins::JoinOn<Join, On>>>
   = note: required because of the requirements on the impl of `diesel::query_dsl::JoinWithImplicitOnClause<posts::table, diesel::query_source::joins::Inner>` for `users::table`

error[E0277]: the trait bound `users::table: diesel::JoinTo<posts::table>` is not satisfied
  --> $DIR/cannot_join_to_non_joinable_table.rs:31:26
   |
31 |     let _ = users::table.left_outer_join(posts::table);
   |                          ^^^^^^^^^^^^^^^ the trait `diesel::JoinTo<posts::table>` is not implemented for `users::table`
   |
   = help: the following implementations were found:
             <users::table as diesel::JoinTo<diesel::query_builder::BoxedSelectStatement<'a, QS, ST, DB>>>
             <users::table as diesel::JoinTo<diesel::query_builder::SelectStatement<F, S, D, W, O, L, Of, G>>>
             <users::table as diesel::JoinTo<diesel::query_source::joins::Join<Left, Right, Kind>>>
             <users::table as diesel::JoinTo<diesel::query_source::joins::JoinOn<Join, On>>>
   = note: required because of the requirements on the impl of `diesel::query_dsl::JoinWithImplicitOnClause<posts::table, diesel::query_source::joins::LeftOuter>` for `users::table`

error[E0277]: the trait bound `posts::table: diesel::JoinTo<users::table>` is not satisfied
  --> $DIR/cannot_join_to_non_joinable_table.rs:36:37
   |
36 |     let _ = users::table.inner_join(join);
   |                                     ^^^^ the trait `diesel::JoinTo<users::table>` is not implemented for `posts::table`
   |
   = help: the following implementations were found:
             <posts::table as diesel::JoinTo<comments::table>>
             <posts::table as diesel::JoinTo<diesel::query_builder::BoxedSelectStatement<'a, QS, ST, DB>>>
             <posts::table as diesel::JoinTo<diesel::query_builder::SelectStatement<F, S, D, W, O, L, Of, G>>>
             <posts::table as diesel::JoinTo<diesel::query_source::joins::Join<Left, Right, Kind>>>
             <posts::table as diesel::JoinTo<diesel::query_source::joins::JoinOn<Join, On>>>
   = note: required because of the requirements on the impl of `diesel::JoinTo<users::table>` for `diesel::query_source::joins::Join<posts::table, comments::table, diesel::query_source::joins::Inner>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::JoinWithImplicitOnClause<diesel::query_builder::SelectStatement<diesel::query_source::joins::JoinOn<diesel::query_source::joins::Join<posts::table, comments::table, diesel::query_source::joins::Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<diesel::expression::nullable::Nullable<comments::columns::post_id>, diesel::expression::nullable::Nullable<posts::columns::id>>>>>, diesel::query_source::joins::Inner>` for `users::table`
